# blueos-viso-inertial

./: .gitmodules  Dockerfile  README.md
app/: april_tags.py  image_capture.py  main.py  mavlink_interface.py  optflow_lkt.py  pyproject.toml  settings.py
app/config/: camera_calib.yaml
app/static/: index.html  register_service
files/: entrypoint.sh  nginx.conf  register_service
site/: index.html  styles.css
